# py-nabla

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TESTING.md  issue_qa_suite.md  pyproject.toml
.github/workflows/: python-test.yml
docs/: ADVANCED_MATH_VALIDATION.md  DOCUMENTATION_PLAN.md  conf.py
docs/blog/: v0.1.0-alpha-announcement.md
docs/reports/: ADVANCED_MATH_VALIDATION.md
docs/tutorial/: 01_getting_started.md  02_calculus.md  03_linear_algebra.md  04_plotting.md  05_differential_and_integral_equations.md  06_fractional_calculus.md
examples/: 01_calculus_demo.py  02_linear_algebra_demo.py  03_plotting_demo.py  04_rendering_styles.py  quickstart.py
nabla/core/: exceptions.py  expression.py
nabla/numeric/: evaluator.py
nabla/parser/: parser.py
nabla/plotting/: plotter.py
py_nabla/: __init__.py
py_nabla/core/: expression.py  fractional.py
py_nabla/parser/: grammar.lark  preprocessor.py  transformer.py
py_nabla/plotting/: __init__.py  plotter.py
py_nabla/rendering/: __init__.py  latex_printer.py
py_nabla/solvers/: __init__.py  laplace_solver.py  solver_exceptions.py
py_nabla/utils/: logger.py
scratch/: advanced_math_validation.py  debug_fractional.py  debug_parser.py  debug_regression.py  test_laplace.py  test_sympy_dsolve.py
tests/: final_qa.py  stress_test.py  test_parser.py  test_robustness.py  verify_tutorials.py
tests/fixtures/: advanced_latex_cases.json  latex_test_cases.json
tests/integration/: test_performance.py
tests/unit/: test_expression.py  test_ode_solver.py
