[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-nabla"
version = "0.1.0-alpha"
authors = [
    { name = "Nabla Team", email = "info@nabla-math.org" },
]
description = "A LaTeX-first mathematical computing library combining symbolic and numeric analysis."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["latex", "mathematics", "symbolic", "numeric", "calculus", "sympy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "sympy>=1.12",
    "numpy>=1.24",
    "lark>=1.1",
]

[project.urls]
"Homepage" = "https://github.com/nabla-math/nabla"
"Bug Tracker" = "https://github.com/nabla-math/nabla/issues"
"Repository" = "https://github.com/nabla-math/nabla"

[project.optional-dependencies]
plotting = ["matplotlib>=3.7"]
numeric = ["scipy>=1.10"]
dev = [
    "pytest>=7.4",
    "black>=23.0",
    "mypy>=1.5",
    "sphinx>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["py_nabla*"]
